--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,39 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<h1>Your Los Angeles Bucket List...</h1>
+	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+	  <div class="container">
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+	        <span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <a class="navbar-brand" href="/">The L.A. Adventure App</a>
+	    </div>
+	    <div class="collapse navbar-collapse">
+	      <ul class="nav navbar-nav">
+	        <li class="active"><a href="/adventures">Adventures</a></li>
+	      </ul>
+	    </div>
+	  </div>
+	</nav><br><br>
 
 <div class="container">
   <%= yield %>
 </div>
 
+<footer>
+  <div class="container">
+  	<div class="footer-left" style="float:left;display:inline-block">
+    	- - LBK - -
+    </div>
+    <div class="footer-right" style="float:right;display:inline-block">
+    	* Rails Girls 2015 *
+    </div>
+  </div>
+</footer>
+<script src="//railsgirls.com/assets/bootstrap.js"></script>
 </body>
 </html>
